--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,53 @@
+astroid==3.3.9
+backcall==0.2.0
 black==25.1.0
 click==8.1.8
+contourpy==1.3.1
+cycler==0.12.1
+dill==0.3.9
+docopt==0.6.2
+fastjsonschema==2.21.1
+fonttools==4.57.0
+graphviz==0.20.3
+gurobipy==12.0.1
+idna==3.10
+isort==6.0.1
+jupyterlab_pygments==0.3.0
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+mccabe==0.7.0
+mistune==3.1.2
 mypy-extensions==1.0.0
+numpy==2.2.3
 packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
 pathspec==0.12.1
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==11.1.0
 platformdirs==4.3.6
+prompt_toolkit==3.0.50
+ptyprocess==0.7.0
+PuLP==3.0.2
+pure_eval==0.2.3
+Pygments==2.19.1
+pylint==3.3.6
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.1
+pyzmq==26.2.1
+rpds-py==0.23.1
+six==1.17.0
+soupsieve==2.6
+tinycss2==1.4.0
+tomlkit==0.13.2
+tornado==6.4.2
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+wcwidth==0.2.13
+webencodings==0.5.1
