Update coverage comment version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,6 @@ jobs:
           path: coverage.xml
 
       - name: Pytest Coverage Comment
-        uses: MishaKav/pytest-coverage-comment@v3
+        uses: MishaKav/pytest-coverage-comment@main
         with:
           pytest-coverage-path: coverage.xml
