--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,15 +4,25 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'app/**'
+      - 'test/**'
+      - '.github/workflows/ci.yml'
   pull_request:
     branches:
       - main
+    paths:
+      - 'app/**'
+      - 'test/**'
+      - '.github/workflows/ci.yml'
 
 jobs:
   quality-checks:
     name: Code Quality and Tests
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      pull-requests: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
