--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Run Pytest with Coverage (Unit Tests)
         run: |
           pip install pytest-cov
+          export PYTHONPATH=.
           pytest --cov=app/model --cov=app/infra --cov-report=term-missing --cov-report=xml --maxfail=3 --disable-warnings -v
 
       - name: Upload Coverage to GitHub Actions
