fix: update xarray integration and tests

--- a/data/model_config.json
+++ b/data/model_config.json
@@ -11,7 +11,7 @@
     "unit2": {
         "pvs": {},
         "consumers": {
-            "consumer1": {
+            "load2": {
                 "filename": "input2.csv"
             }
         },
