Pandapower conversion major refactor + Add base entity conversion method to all converters

--- a/example_config.ini
+++ b/example_config.ini
@@ -1,3 +1,11 @@
 [time]
 time_set = 35037
 frequency = 15min
+
+[path]
+root = C:\NextCloud\Doktori\8_felev\Onlab\OmnesArchitectureDesign\data
+simbench_input = ${root}\simbench_data\
+simbench_converted = ${root}\simbench_converted\
+
+[simbench]
+network = 1-LV-rural1--0-sw
