--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -56,7 +56,18 @@ jobs:
           name: coverage-report
           path: coverage.xml
 
-      - name: Pytest Coverage Comment
+      - name: Generate Coverage Badge for README
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        uses: tj-actions/coverage-badge-py@v2
+
+      - name: Upload coverage badge for README
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-badge
+          path: coverage-badge.svg
+
+      - name: Pytest Coverage Comment on PRs
         if: github.event_name == 'pull_request'
         uses: MishaKav/pytest-coverage-comment@main
         with:
