--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install mkdocs material mkdocstrings[python]
+          pip install mkdocs mkdocs-material mkdocstrings[python]
 
       - name: Build documentation
         run: mkdocs build --strict
