--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
       - 'app/**'
       - 'test/**'
       - '.github/workflows/ci.yml'
+      - 'sonar-project.properties'
   pull_request:
     branches:
       - main
@@ -15,6 +16,7 @@ on:
       - 'app/**'
       - 'test/**'
       - '.github/workflows/ci.yml'
+      - 'sonar-project.properties'
 
 jobs:
   quality-checks:
