FIxes in example_model

--- a/config/example_config.ini
+++ b/config/example_config.ini
@@ -3,7 +3,7 @@ time_set = 35037
 frequency = 15min
 
 [path]
-root = D:\NextCloud\Doktori\8_felev\Onlab\OmnesArchitectureDesign\data
+root = C:\NextCloud\OMNES\data
 output = ${path:root}\output
 
 [simbench]
